Fixed Customer RightDrawer Form Alignment

--- a/src/main.css
+++ b/src/main.css
@@ -290,7 +290,7 @@ img {
 }
 .discount-details .discounts .ant-form-item {
     margin-right: 14px;
-    width: 35% !important;
+    width: 100% !important;
 }
 
 .discount-details .discounts .full-width {
